# PSG4Mars

./: .gitignore  README.md  basic_cfg.txt  check_OD.ipynb  p_edges.npy  settings.json
PSGpy/: README.md  pyproject.toml
PSGpy/src/PSGpy/: OD.py  atm_obj.py  cfg.py  docker_utils.py  run_psg.py  utils.py
config/: OD4Mars.json
doc/: Basic_cfg4Mars.md  cfg_guide.md
output/: mean_profile.csv
pypsg/: pyproject.toml
pypsg/src/pypsg/: OD.py  atm_obj.py  docker.py  run_psg.py
python/: OD.py  aps_bps.txt  atm_layers.py  atm_obj.py  cfg_io.py  cfg_read.py  io_cfg.py  io_data.py  pypsg.py  run_psg.py  utils.py
scripts/: check_fit.ipynb  plot_fit.py  plot_mean_profile.py  prova_fit.ipynb
src/: OD.py  OD_CO2_binning.ipynb  OD_binning.py  OD_fit.py  OD_parameterization.py  OD_parameterization2.py  OD_pipeline.ipynb  gen_profiles.py  generate_CO2_test.ipynb  generate_OD.ipynb  generate_OD.py  generate_cfg4OD.py  generate_mean_profile.py  generate_p_levels.py  generate_profiles.py  genrad.py  input4pack.py  logger_setup.py  main.py  mean_profile.csv  molecular_metadata.txt  p_edges.npy  pack_oneband.f90  plot_spectrum.py  py4Mars.py  test_OD_resolution.ipynb  test_gen_rad.py  write_mean_cfg.ipynb
src/pyOD/: read_OD.py
src/pypsg/: OD.py  atm_obj.py  cfg.py  utils.py
test/OD4Mars/: OD.py  OD_binning.py  OD_fit.py  OD_parameterization.py  OD_parameterization2.py  OD_pipeline.ipynb  generate_OD.py  generate_cfg4OD.py  generate_mean_prof.ipynb  generate_mean_profile.py  generate_plevels.py  generate_plvl.ipynb  generate_profiles.py  generate_sunOD.py  py4Mars.py
