[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PSGpy"
version = "0.0.1"
authors = [
    {name = "Lorenzo Buriola", email = "lorenzo.buriola@unibo.it"},
]
description = "Python integration for Planetary Spectrum Generator"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "numpy",
    "pandas",
    "scipy",
    "docker"
]
